# Pulsar

./: .gitignore  .gitmodules  CMakeLists.txt
ProvingGrounds/: CMakeLists.txt  Main.cpp
ProvingGrounds/Headers/: BatchTest.hpp  BlenderTest.hpp  CubeTest.hpp  QuadTest.hpp  Tester.hpp  TextTest.hpp  Ui.hpp
ProvingGrounds/Headers/details/: BatchTestDecl.hpp  BatchTestImpl.ipp  BlenderTestDecl.hpp  BlenderTestImpl.ipp  CubeTestDecl.hpp  CubeTestImpl.ipp  Dependencies.hpp  QuadTestDecl.hpp  QuadTestImpl.ipp  TesterDecl.hpp  TesterImpl.ipp  TextTestDecl.hpp  TextTestImpl.ipp  UiDecl.hpp  UiImpl.ipp
ProvingGrounds/Resources/Shaders/: BasicFragment.glsl  BasicVertex.glsl  MVPFragment.glsl  MVPVertex.glsl  QuadFragment.glsl  QuadVertex.glsl  TextFragment.glsl  TextVertex.glsl  VPVertex.glsl
include/Pulsar/: Pulsar.hpp
include/Pulsar/Dependencies/: CMakeLists.txt
include/Pulsar/Dependencies/glad/include/glad/: glad.h
include/Pulsar/Dependencies/glad/src/: glad.c
include/Pulsar/Headers/: Batch.hpp  CQuad.hpp  EmbShaders.hpp  Font.hpp  IndexBuffer.hpp  Keyboard.hpp  Mouse.hpp  Quad.hpp  QuadT.hpp  Renderer.hpp  Shader.hpp  ShaderGenerator.hpp  Texture.hpp  TxQuad.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
include/Pulsar/Headers/batch/: QuadT.hpp
include/Pulsar/Headers/batch/details/: QuadTDecl.hpp  QuadTImpl.ipp
include/Pulsar/Headers/details/: BatchDecl.hpp  BatchImpl.ipp  CQuadDecl.hpp  CQuadImpl.ipp  Dependencies.hpp  EmbShadersDecl.hpp  EmbShadersImpl.ipp  FontDecl.hpp  FontImpl.ipp  IndexBufferDecl.hpp  IndexBufferImpl.ipp  KeyboardDecl.hpp  KeyboardImpl.ipp  MouseDecl.hpp  MouseImpl.ipp  QuadDecl.hpp  QuadImpl.ipp  QuadTDecl.hpp  QuadTImpl.ipp  RendererDecl.hpp  RendererImpl.ipp  ShaderDecl.hpp  ShaderGeneratorDecl.hpp  ShaderGeneratorImpl.ipp  ShaderImpl.ipp  TextureDecl.hpp  TextureImpl.ipp  TxQuadDecl.hpp  TxQuadImpl.ipp  VertexArrayDecl.hpp  VertexArrayImpl.ipp  VertexBufferDecl.hpp  VertexBufferImpl.ipp  WindowDecl.hpp  WindowImpl.ipp
src/: CMakeLists.txt  Pulsar.cpp  stb_image.c
